Update Google Analytics

--- a/index.html
+++ b/index.html
@@ -29,30 +29,29 @@
   
   
   </head>
+
   <!-- Google tag (gtag.js) -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-FRDW6Q9T7Z"></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-P5JJFWHWS6"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
 
-    gtag('config', 'G-FRDW6Q9T7Z');
+    gtag('config', 'G-P5JJFWHWS6');
   </script>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+
+  
   <!--Start of Tawk.to Script-->
-  <!-- <script type="text/javascript">
+  <script type="text/javascript">
     var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
     (function(){
-      var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
-      s1.async=true;
-      s1.src='https://embed.tawk.to/64838db6cc26a871b021a091/1h2gu3503';
-      s1.charset='UTF-8';
-      s1.setAttribute('crossorigin','*');
-      s0.parentNode.insertBefore(s1,s0);
+    var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+    s1.async=true;
+    s1.src='https://embed.tawk.to/6683c36aeaf3bd8d4d171ae3/1i1pb6m7d';
+    s1.charset='UTF-8';
+    s1.setAttribute('crossorigin','*');
+    s0.parentNode.insertBefore(s1,s0);
     })();
-  </script> -->
+  </script>
   <!--End of Tawk.to Script-->
 </html>
